--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-	<script src="index.js"></script>
+	<input id="toggle-on" name="toggle" type="radio">
+	<label for="toggle-on">On</label>
+	<input id="toggle-off" name="toggle" type="radio">
+	<label for="toggle-off">Off</label>
+    <script src="index.js"></script>
   </body>
 </html>
