--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+
+	<div class="typewriter">
+	  <h1>Is it a salad?</h1>
+	</div>
+
 	<input id="toggle-on" name="toggle" type="radio">
 	<label for="toggle-on">On</label>
 	<input id="toggle-off" name="toggle" type="radio">
